<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_dark"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_lColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColorHint="#ffffff">

        <EditText
            android:id="@+id/lColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/luggage_color"
            android:inputType="text"
            android:textColor="#ffffff" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_lOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColorHint="#ffffff">

        <EditText
            android:id="@+id/lOwner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/luggage_owner"
            android:inputType="text"
            android:textColor="#ffffff"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_lCarrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColorHint="#ffffff">

        <EditText
            android:id="@+id/lCarrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/luggage_carrier"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_lReceiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColorHint="#ffffff">

        <EditText
            android:id="@+id/lReceiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/luggage_receiver"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_lStatus"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textColorHint="#ffffff">

            <TextView
                style="@style/TextView.InputLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/luggage_status" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/lStatus"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:spinnerMode="dialog" />


        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp">


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/date_button"
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="end|bottom"
            android:onClick="datepicker"
            android:src="@drawable/calender_white"
            app:backgroundTint="@color/actionbar_color"
            app:elevation="10dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_lDate"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColorHint="#ffffff">

        <EditText
            android:id="@+id/lDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/luggage_date"
            android:inputType="text"
            android:textColor="#ffffff"/>
    </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/scan_button"
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="end|bottom"
            android:onClick="scanNow"
            android:src="@drawable/camera"
            app:backgroundTint="@color/actionbar_color"
            app:elevation="10dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_lScanId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textColorHint="#ffffff">

            <EditText
                android:id="@+id/lScanId"
                android:layout_width="289dp"
                android:layout_height="match_parent"
                android:hint="@string/scanned_luggage_id"
                android:singleLine="true"
                android:textColor="#ffffff" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
    <!-- <TextView
            android:id="@+id/scan_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/scan_button" />
        <TextView
            android:id="@+id/scan_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/scan_format" />-->


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <Button
            android:id="@+id/add_product"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="28dp"
            android:background="@color/actionbar_color"
            android:onClick="addProduct"
            android:text="@string/add_product"
            android:textColor="@android:color/white"
            android:layout_gravity="end"/>

    </android.support.v7.widget.LinearLayoutCompat>



</LinearLayout>